--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/flights
 spring.datasource.username=root
 #spring.datasource.password=password
 
+server.error.include-message=always
+server.error.include-binding-errors=always
+
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto
 spring.jpa.hibernate.ddl-auto=none
+
+# Logging configuration. This is good only for development
+logging.file.name=logs\\flights-apis.log
+logging.file.max-size=10MB
+logging.file.max-history=5
